--- a/Core/View/Tab/ApiAccess.html.twig
+++ b/Core/View/Tab/ApiAccess.html.twig
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form action="" method="post" onsubmit="animateSpinner('add')">
     {{ formToken() }}
     <input type="hidden" name="action" value="edit-rules"/>
     <input type="hidden" name="activetab" value="{{ fsc.getCurrentView().getViewName() }}"/>
