--- a/Core/View/Updater.html.twig
+++ b/Core/View/Updater.html.twig
@@ -41,7 +41,7 @@
             <div class="col-sm-6">
                 <div class="btn-group">
                     <a href="{{ asset('AdminPlugins') }}" class="btn btn-sm btn-secondary">
-                        <i class="fa-solid fa-arrow-start fa-fw" aria-hidden="true"></i>
+                        <i class="fa-solid fa-arrow-left fa-fw" aria-hidden="true"></i>
                         <span class="d-none d-md-inline-block">{{ trans('plugins') }} </span>
                     </a>
                     <a href="{{ fsc.url() }}" class="btn btn-sm btn-secondary" title="{{ trans('refresh') }}">
