--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -42,7 +42,7 @@
                                 <i class="{{ fsc.getPageData().icon }} mr-2"></i> {{ fsc.title }}
                             </h1>
                             <p class="text-muted mb-4">{{ trans('report-taxes-p') }}.</p>
-                            <div class="form-row">
+                            <div class="row">
                                 {% if fsc.empresa.count() > 1 %}
                                     <div class="col-sm mb-3">
                                         {{ trans('company') }}
@@ -110,7 +110,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="form-row">
+                            <div class="row">
                                 <div class="col-sm-3 mb-3">
                                     {{ trans('date') }}
                                     <select name="type-date" class="form-select">
@@ -141,7 +141,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="form-row">
+                            <div class="row">
                                 <div class="col-12 h5 border-bottom pt-4 pb-2">
                                     <i class="fa-solid fa-list-check mr-1"></i> {{ trans('columns') }}
                                 </div>
@@ -283,7 +283,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <div class="form-row">
+                            <div class="row">
                                 <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('purchases')"
                                             class="btn btn-lg btn-block btn-secondary btn-spin-action">
