--- a/Core/View/Login/TwoFactor.html.twig
+++ b/Core/View/Login/TwoFactor.html.twig
@@ -8,18 +8,18 @@
                 <form action="{{ asset('login') }}" method="post" class="form">
                     {{ formToken() }}
                     <input type="hidden" name="action" value="valid-totp">
-                    <input type="hidden" name="fsNick" value="{{ fsc.user.nick }}">
+                    <input type="hidden" name="fsNick" value="{{ fsc.two_factor_user }}">
                     <div class="card mt-4">
                         <a href="{{ asset('login') }}">
                             {% set idfile = settings('default','idloginimage', 0) %}
                             {{ _self.loadLogo(idfile) }}
                         </a>
                         <div class="card-body">
-                            <p class="card-text text-center">Ingrese el codigo TOTP</p>
+                            <p class="card-text text-center">Ingrese el código TOTP</p>
                             <div class="mb-3">
                                 <div class="input-group">
                                     <span class="input-group-text">
-                                            <i class="fa-solid fa-user fa-fw" aria-hidden="true"></i>
+                                        <i class="fa-solid fa-user fa-fw" aria-hidden="true"></i>
                                     </span>
                                     <input type="text" name="fsCode" class="form-control" maxlength="50"
                                            placeholder="{{ trans('code') }}" required autocomplete="off"
